--- a/MyWap/Templates/Static/Reg_Exist.htm
+++ b/MyWap/Templates/Static/Reg_Exist.htm
@@ -15,7 +15,7 @@
                             <strong>Để hủy đăng ký, xin vui lòng click vào nút bên dưới</strong></p>
                     </div>
                     <div class="images_dangky">
-                        <a href="{DNS}/page/{1}/dereg.html">
+                        <a href="{DNS}/page/dereg.html?para={1}">
                             <img src="{DNS}/img/huy.png" title="" alt="" /></a>
                     </div>
                     
