--- a/MyWap/Templates/Static/Reg_NotExist.htm
+++ b/MyWap/Templates/Static/Reg_NotExist.htm
@@ -11,7 +11,7 @@
                         <li>Xin chào <strong style="color: #fd9800;">{0}</strong></br> Đăng ký ngay để tham gia chương trình và nhận giải thưởng ngày điện thoại <strong>Nokia Lumia</strong></li>
                     </div>
                     <div class="images_dangky">
-                        <a href="{DNS}/page/{1}/accept.html">
+                        <a href="{DNS}/page/accept.html?para={1}">
                             <img src="{DNS}/img/dang_ky_ngay.png" title="" alt="" /></a>
                     </div>
                     <div class="content_dangky">
