Thống kê người chơi cho Chi để phá người trúng thưởng

--- a/MyWap/Style/style.css
+++ b/MyWap/Style/style.css
@@ -86,7 +86,7 @@ img { border: 0 none;}
 /* Trang hướng dẫn */
 .content {width:100%;}
 .detail_content{width:100%; margin-bottom:30px;}
-.title_detail{width:100%; background:url(../images/bg_title.jpg) repeat-x; height:26px; margin-bottom:8px; min-height:26px;}
+.title_detail{width:100%;  height:26px; margin-bottom:8px; min-height:26px;}
 .title_detail h1{line-height:26px; text-align:left; color:#2e9bdf; font-weight:bold; font-size:12px;width:98%; margin:0 auto;}
 .newdetail {width:98%; margin: 0 auto;}
 .newdetail_in{width:100%;}
@@ -149,7 +149,7 @@ img { border: 0 none;}
 
 
 .service {width:100%; margin-bottom:15px;}
-.title_service{width:100%; background:url(../images/bg_title.jpg) repeat-x; height:26px; margin-bottom:8px; min-height:26px;}
+.title_service{width:100%;  height:26px; margin-bottom:8px; min-height:26px;}
 .title_service h2{line-height:26px; text-align:left; color:#0173a2; font-weight:bold; font-size:12px; width:98%; margin:0 auto;}
 a.link_name_service {color:#0173a2;}
 a.link_name_service:hover {color:#ed1c24;}
