--- a/MyWeb/Templates/Service/Winner.htm
+++ b/MyWeb/Templates/Service/Winner.htm
@@ -1,23 +1,28 @@
 ﻿ <!--home-->
 <div id="home">
     <div id="home_in">
-        <div class="huongdan_choi">
+        <div class="huongdan_choi" style="">
             <div class="box_huongdan_choi">
 
                 <div class="noidung_huongdan_choi">
                     <div class="noidung_huongdan_choi_in scroll-pane">
                         <h1 class="left">KHÁCH HÀNG TRÚNG THƯỞNG</h1>
                         <div class="box_khachhang">
-                            <div class="info_khachhang">
-                                <ul>
-                                    <li class="stt">STT</li>
-                                    <li class="hoten">Họ tên</li>
-                                    <li class="dienthoai">Sđt</li>
-                                    <li class="diachi">Địa chỉ</li>
-                                    <li class="giaithuong">Giải thưởng</li>
-                                </ul>
-                            </div>
-                            {0}
+                            <table cellpadding="0" cellspacing="0" border="0">
+                                <tbody>
+                                    <tr>
+                                        <th>STT</th>
+                                        <th>Ngày</th>
+                                        <th>Họ và Tên</th>
+                                        <th>Số điện thoại</th>
+                                        <th>
+                                            Địa chỉ
+                                        </th>
+                                        <th>Giải thưởng</th>
+                                    </tr>
+                                  {0}
+                                </tbody>
+                            </table>
                         </div>
                     </div>
 
