Thêm phần người chiến thắng theo tuần

--- a/MyWeb/Templates/Static/Rule.htm
+++ b/MyWeb/Templates/Static/Rule.htm
@@ -8,16 +8,13 @@
                         <h1 class="left">
                             THỂ LỆ GIẢI THƯỞNG
                         </h1>
-                        <div>
+                        <div style="color:#000;">
                             <div style="text-align:left;">
-                                <b>
                                     Nguyên tắc lựa chọn thuê bao trúng thưởng trong tuần: Gồm 2 bước:
-                                </b>
                             </div>
                             <ul>
-
                                 <li>
-                                    <b>- Bước 1: Lựa chọn thuê bao chiến thắng theo ngày: Các thuê bao chiến thắng trong ngày được xét theo thứ tự ưu tiên sau:</b>
+                                    <b>- Bước 1:</b> Lựa chọn thuê bao chiến thắng theo ngày: Các thuê bao chiến thắng trong ngày được xét theo thứ tự ưu tiên sau:
 
                                     <ul>
                                         <li>+ Thuê bao dự đoán đúng tên người nổi tiếng của phiên dự đoán;</li>
@@ -27,8 +24,9 @@
                                 </li>
                                 <li>
                                     <b>
-                                        - Bước 2: Lựa chọn thuê bao chiến thắng trong tuần
-                                    </b> 
+                                        - Bước 2:
+                                    </b>Lựa chọn thuê bao chiến thắng trong tuần
+                                     
                                         <ul>
                                             <li>+ Dựa trên kết quả thuê bao chiến thắng theo ngày, lựa chọn thuê bao có số lần chiến thắng nhiều nhất trong tuần để trao giải. Trường hợp có > 2 thuê bao có cùng số lần chiến thắng như nhau thì dựa vào tổng thời gian dự đoán sớm hơn để lựa chọn thuê bao chiến thắng chung cuôc nhận giải 5 triệu đồng tiền mặt hàng tuần từ VinaPhone</li>
                                         </ul>
